--- a/style.css
+++ b/style.css
@@ -42,3 +42,15 @@ body {
   width: 100%;
   text-align: center;
 }
+
+.p_upgrade {
+  width: 230px;
+  margin: 5px;
+  float: left;
+}
+.p_upgrade > .upgrade_name {
+  font-size: 1.5em;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+}
