--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
 .disabled {
   background-color: #aaa;
 }
+.unavailable {
+  background-color: #ccc;
+}
 
 .tab-selector {
   padding: 10px 12px;
@@ -67,6 +70,29 @@ body {
   font-size: 1.5em;
   font-weight: bold;
   width: 100%;
+  text-align: center;
+}
+
+.spiral_equation {
+  width: 470px;
+  margin: 5px;
+  float: left;
+}
+.spiral_equation > .spiral_symbol {
+  font-size: 1.5em;
+  font-weight: bold;
+  float: left;
+  text-align: center;
+}
+.spiral_equation > .spiral_name {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-left: 80px;
+}
+.spiral_equation > .spiral_reward {
+  font-size: 1em;
+  font-weight: bold;
+  float: right;
   text-align: center;
 }
 
