Added r tab upgrades to stat calculation

--- a/style.css
+++ b/style.css
@@ -34,6 +34,17 @@ body {
   display: block;
 }
 
+.stat {
+  width: 200px;
+  height: 20px;
+}
+.stat > .stat_label {
+  float: left;
+}
+.stat > .stat_value {
+  float: right;
+}
+
 .r_upgrade {
   width: 230px;
   height: 100px;
