--- a/style.css
+++ b/style.css
@@ -24,3 +24,10 @@
   top: 50%;
   transform: translateY(-50%);
 }
+.effect > div {
+  float: left;
+  margin: 0;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
