--- a/style.css
+++ b/style.css
@@ -17,11 +17,21 @@ p {
   background-color: #666666;
 }
 
-#navbar > div { 
-  float: left;
-  padding: 10px 12px; 
-  margin: 10px 0 0 62px;
+.nav-button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  top: 10px;
+}
+.nav-button-mini {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  text-align: center;
   line-height: 20px;
+  top: 10px;
 }
 
 .tab.hidden {
