--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ div {
 }
 
 .nav-button {
-  width: 150px;
+  float: left;
+  width: 160px;
   height: 48px;
   text-align: center;
   vertical-align: middle;
