--- a/style.css
+++ b/style.css
@@ -31,3 +31,13 @@ div {
   vertical-align: middle;
   line-height: 48px;
 }
+
+.reward-uncommon {
+  color: #00FFFF;
+}
+.reward-rare {
+  color: #EE7800;
+}
+.reward-onetime {
+  color: #AA5599;
+}
